--- a/FantasyFootball/FantasyFootball.csproj
+++ b/FantasyFootball/FantasyFootball.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SQLite.CodeFirst" Version="1.7.0.36" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
+    <PackageReference Include="System.Data.SQLite.EF6" Version="1.0.119" />
+  </ItemGroup>
+
 </Project>
